--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   ferry: ^0.10.5-dev.3
   ferry_hive_store: ^0.4.4
   ferry_flutter: ^0.5.4
-  flutter_mobx: ^2.0.6+1
+
   freezed: ^2.0.3+1
   json_serializable: ^6.2.0
 
@@ -39,6 +39,7 @@ dev_dependencies:
   mobx_codegen: ^2.0.7
   modular_test: ^2.0.0
   build_runner: ^2.1.11
+  flutter_mobx: ^2.0.6+1
 
   ferry_generator: ^0.5.0-dev.10
   flutter_test:
@@ -52,8 +53,8 @@ dev_dependencies:
 flutter:
 
   # To add assets to your package, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/file.svg
   #   - images/a_dot_ham.jpeg
   #
   # For details regarding assets in packages, see
