--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ flutter:
   # To add assets to your package, add an assets section, like this:
   assets:
     - assets/file.svg
+    - assets/empty.svg
   #   - images/a_dot_ham.jpeg
   #
   # For details regarding assets in packages, see
