--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,8 @@ dependencies:
   ferry: ^0.10.5-dev.3
   ferry_hive_store: ^0.4.4
   ferry_flutter: ^0.5.4
-
+  syncfusion_flutter_datepicker: ^20.1.56
+  syncfusion_flutter_pdfviewer: ^20.1.56-beta
   freezed: ^2.0.3+1
   json_serializable: ^6.2.0
 
@@ -40,6 +41,18 @@ dev_dependencies:
   modular_test: ^2.0.0
   build_runner: ^2.1.11
   flutter_mobx: ^2.0.6+1
+  # file cross picker starts here
+  file_selector_windows: ^0.0.2
+  path_provider: ^2.0.2
+  package_info: ^2.0.1
+  share: ^2.0.2
+  disk_space: ^0.2.1
+  file_picker: ^4.1.3
+  http_parser: ^4.0.0
+  file_selector: ^0.8.2
+  file_selector_linux: ^0.0.2
+  file_selector_macos: ^0.0.4
+  #ends here
 
   ferry_generator: ^0.5.0-dev.10
   flutter_test:
