--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_svg: ^2.0.0+1
   dio: ^4.0.6
   get: ^4.6.5
+  layout: ^1.0.3
   flutter_dotenv: 5.0.2
   syncfusion_flutter_datepicker: ^20.4.49
   syncfusion_flutter_pdfviewer: ^20.4.49
