--- a/file_picker_cross-4.6.0/pubspec.yaml
+++ b/file_picker_cross-4.6.0/pubspec.yaml
@@ -7,7 +7,7 @@ issue_tracker: https://gitlab.com/TheOneWithTheBraid/file_picker_cross/issues
 publish_to: none
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: "^3.0.0"
 
 dependencies:
   flutter:
