--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   syncfusion_flutter_datepicker: ^20.4.49
   syncfusion_flutter_pdfviewer: ^20.4.49
   flutter_modular: ^5.0.3
-  mobx: ^2.1.3+1
+  # mobx: ^2.1.3+1
   flutter_mobx: ^2.0.6+5
   flutter_animated_dialog: ^2.0.1
   currency_text_input_formatter: ^2.1.8
@@ -37,6 +37,7 @@ dependencies:
     path: "flutter_side_menu-0.3.1"
   quickalert: ^1.0.0
   shaky_animated_listview: ^0.0.5
+  # context_menus: ^1.0.2
 
 
 dependency_overrides:
