--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: shared_component
 description: A new Flutter package project.
 version: 1.0.1
-homepage:
+homepage: none
 publish_to: none
 
 environment:
@@ -43,7 +43,7 @@ dependencies:
   # context_menus: ^1.0.2
 
 
-dependency_overrides:
+# dependency_overrides:
   # rxdart: ^0.27.7
 
 dev_dependencies:
