--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,8 +9,8 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
-  google_ui:
-    path: "google-ui"
+  # google_ui:
+  #   path: "google-ui"
   flutter:
     sdk: flutter
     
