--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   dio: ^4.0.6
   get: ^4.6.5
   layout:
-    path: "layout-1.0.3"
+    path: "./layout-1.0.3"
   flutter_dotenv: ^5.1.0
   syncfusion_flutter_datepicker: ^22.2.10
   syncfusion_flutter_pdfviewer: ^22.2.10
@@ -31,12 +31,12 @@ dependencies:
   currency_text_input_formatter: ^2.1.8
   getwidget: ^3.0.1
   dropdown_search:
-    path: "dropdown_search-5.0.6"
+    path: "./dropdown_search-5.0.6"
   graphql_flutter: ^5.2.0-beta.5
   file_picker:
-    path: "file_picker-5.3.2"
+    path: "./file_picker-5.3.2"
   flutter_side_menu:
-    path: "flutter_side_menu-0.3.1"
+    path: "./flutter_side_menu-0.3.1"
   quickalert: ^1.0.0
   shaky_animated_listview: ^0.0.5
   printing: ^5.11.0
