Correcting the package path

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   dio: ^4.0.6
   get: ^4.6.5
   layout:
-    path: ./layout-1.0.3
+    path: layout-1.0.3
   flutter_dotenv: ^5.1.0
   syncfusion_flutter_datepicker: ^22.2.10
   syncfusion_flutter_pdfviewer: ^22.2.10
